--- a/app/src/main/res/layout/first_layout.xml
+++ b/app/src/main/res/layout/first_layout.xml
@@ -8,4 +8,9 @@
     android:layout_height="wrap_content"
     android:text="Button 1"
     />
+
+    <EditText
+        android:id="@+id/first"
+        android:layout_width="match_parent"
+        android:layout_height="55dp" />
 </LinearLayout>
